--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,13 @@ code {
     font-family: "Roboto Mono", Consolas, sans-serif;
 }
 
+.centered {
+    text-align: center;
+}
+
+/* homepage */
+
+
 /* tutorial */
 .tutorial_content-row {
     margin: 30px;
