--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,47 @@ code {
 .top-buffer{
     margin-top: 20px;
 }
+.contact-btn{
+    color: white;
+    background-color: #FF9800;
+    padding: 0.9vw 1.7vw !important;
+    text-transform: uppercase;
+    letter-spacing: 1.9px;
+    border-width: 0 !important;
+
+    transition: .2s ease-in-out;
+    -webkit-transition: .2s ease-in-out;
+    -moz-transition: .2s ease-in-out;
+    -o-transition: .2s ease-in-out;
+}
+.form-control {
+    padding: 0 0 0.5vw 0 !important;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none !important;
+}
+.form-group{
+    border-bottom: 1px solid #555;
+    margin-bottom: 3vw;
+}
+.form-group::before {
+    content: '';
+    position: absolute;
+}
+.form-effect{
+    box-sizing: content-box;
+    border-bottom: 1px solid #FF2241;
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    transition: width 0.6s ease-in-out;
+}
+.form-effect.changed::before{
+    width: 100%;
+    border-bottom: 1px solid #FF2241;
+}
+.contact-subheader {
+    font-size: 20px;
+    padding-bottom: 70px
+}
