--- a/css/footer.css
+++ b/css/footer.css
@@ -131,6 +131,14 @@ footer {
     .footer-nav-links div {
         width: 90% !important;
     }
+    .footer-nav a {
+        font-size: 12.5px;
+        color: white !important;
+        text-decoration: none;
+    }
+    .footer-mobile {
+        width: 100% !important;
+    }
 }
 @media only screen and (max-width : 480px) {
     .footer-text p {
