--- a/css/header.css
+++ b/css/header.css
@@ -12,8 +12,11 @@ nav.navbar.navbar-fixed-top.p-a-9.nav {
 .navbar a {
         color: white; /* header-text-color  */
 }
-.navbar a:hover, .navbar a:active, .navbar a:focus{
+.navbar a:active, .navbar a:focus{
         color: #2B98F0; /* header-text-color  */
+}
+.navbar a:hover {
+    color: white;
 }
 .dropdown-menu a{
     color: #2B98F0 !important;
