--- a/css/footer.css
+++ b/css/footer.css
@@ -28,6 +28,12 @@ footer {
     background-color: #2196F3;
     padding-top: 2vw !important;
 		margin-top: 30px;
+		padding-left: 0px !important;
+		padding-right: 0px !important;
+}
+footer.container-fluid{
+	padding-left: 0px !important;
+	padding-right: 0px !important;
 }
 .footer-text p {
     color: #fff !important;
