--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 .shadow-color {background: #888888;}
 
 * {
-    word-wrap: break-word;
+    /*word-wrap: break-word;*/
 }
 
 html, body {
@@ -195,4 +195,8 @@ code {
 .blogNav li h4 {
     display: inline;
     padding-bottom: 0px;
+}
+
+.course-wordwrap {
+    /*word-wrap: none !important;*/
 }
