--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,19 @@ code {
     display: none;
 }
 
+.homepage_subscribe-form {
+    margin: 30px 0 30px 0;
+}
+
+.homepage_subscribe-email {
+    margin-right: 20px;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid #212121;
+    background: #f5f5f5;    /* well background */
+    min-width: 300px;
+}
+
 /* build the table on desktop */
 @media (min-width: 300px) {
     .homepage_newsletter-tr-heading {
